# genLeads-crewAI

./: README.md
bank_FX_leads/: _01.initial_industry_list.json  _02.vetted_industry_list.json  _04.sales_offerings.md  _bank FX leads-share.ipynb  _bank FX leads.ipynb  crewAI_GUI.py  genFXLeadsCrew.py  main.py
gen_fxleads_crew/: README.md  pyproject.toml
gen_fxleads_crew/src/gen_fxleads_crew/: CustomStreamlitCallbackHandler.py  crew.py  main.py  webui.py
gen_fxleads_crew/src/gen_fxleads_crew/config/: agents.yaml  agents.yaml.bak  tasks.yaml  tasks.yaml.bak
gen_fxleads_crew/tests/: _04.sales_offerings_3.md
gen_fxleads_crew_v2/: README.md  pyproject.toml  report.md
gen_fxleads_crew_v2/src/gen_fxleads_crew_v2/: RateLimitErrorHandler.py  crew.py  main.py  webui.py
gen_fxleads_crew_v2/src/gen_fxleads_crew_v2/config/: agents.yaml  tasks.yaml
gen_fxleads_crew_v2/tests/: report_2024-05-30_01:55:48.md  report_2024-05-30_030159.md  report_2024-05-30_043323.md  report_2024-05-30_161820.md  report_2024-07-24_015852.md  report_2024-07-24_020942.md  research_2024-05-30_01:23:51.md  research_2024-05-30_02:11:45.md  research_2024-05-30_032847.md  research_2024-05-30_034714.md  research_2024-05-30_161820.md  research_2024-07-24_015852.md  research_2024-07-24_020942.md
