[tool.poetry]
name = "gen_fxleads_crew"
version = "0.1.0"
description = "gen_FXLeads_crew using crewAI"
authors = ["Leon X Li <leonchao@yeah.net>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.30.11"
duckduckgo-search = "^6.1.0"
streamlit = "^1.34.0"
flask = "^3.0.3"
crewai-tools = "^0.2.6"

[tool.poetry.scripts]
gen_fxleads_crew = "gen_fxleads_crew.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"